# TraderUP

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  alerts.py  health.py  simulations.py  strategies.py
backend/app/core/: config.py
backend/app/indicators/: engine.py
backend/app/rules/: engine.py
backend/app/schemas/: alert.py  market.py  strategy.py
backend/app/services/: alert_store.py  event_bus.py  market_stream.py  strategy_store.py  telegram.py  websocket_manager.py
backend/app/tests/: test_confluence_engine.py
docs/: architecture.md  ui-style-guide.md
firebase/: .firebaserc  firebase.json  firestore.rules
firebase/functions/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
firebase/functions/src/: index.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/api/: alerts.ts  candles.ts  index.ts  strategies.ts
frontend/api/_lib/: firebaseAdmin.ts  indicators.ts
frontend/api/lib/: firebaseAdmin.ts
frontend/api/strategies/: [id].ts
frontend/lib/: strategies.ts  types.ts
frontend/src/: main.tsx
frontend/src/components/: AlertLog.tsx  MarketChart.tsx  Sidebar.tsx  StrategyBuilder.tsx  SummaryCards.tsx  TopBar.tsx
frontend/src/lib/: firebase.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: functionsClient.ts  realtime.ts
frontend/src/store/: alertStore.ts  marketStore.ts
frontend/src/styles/: theme.ts
