[tool.poetry]
name = "traderup-backend"
version = "0.1.0"
description = "Backend FastAPI para sistema de alertas de trading de alta frequência baseado em confluência de indicadores."
authors = ["TraderUP Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
databases = "^0.7.0"
pydantic = "^2.6.4"
pandas = "^2.2.1"
numpy = "^1.26.4"
ta = "^0.11.0"
httpx = "^0.27.0"
python-telegram-bot = "^21.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = { version = "^0.27.0", extras = ["cli"] }
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
